Bug 148792 - [ARM] Fix the ARM Traditional build after r189288
Summary: [ARM] Fix the ARM Traditional build after r189288
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: JavaScriptCore (show other bugs)
Version: Other
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Csaba Osztrogonác
URL:
Keywords:
Depends on:
Blocks: 108645 148742
  Show dependency treegraph
 
Reported: 2015-09-04 02:22 PDT by Csaba Osztrogonác
Modified: 2015-09-04 04:16 PDT (History)
5 users (show)

See Also:


Attachments
Patch (2.21 KB, patch)
2015-09-04 03:25 PDT, Csaba Osztrogonác
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Csaba Osztrogonác 2015-09-04 02:22:53 PDT
https://trac.webkit.org/changeset/189288 broke the ARM Traditional build.
https://build.webkit.org/builders/EFL%20Linux%20ARMv7%20Traditional%20Release/builds/14916

build log:
../../Source/JavaScriptCore/assembler/MacroAssemblerARM.h: In function 'void JSC::ctiPatchCallByReturnAddress(JSC::ReturnAddressPtr, JSC::FunctionPtr)':
../../Source/JavaScriptCore/assembler/MacroAssemblerARM.h:1489:17: error: 'static void JSC::MacroAssemblerARM::repatchCall(JSC::CodeLocationCall, JSC::FunctionPtr)' is private
...

I'm going to try to fix it in few days.
Comment 1 Csaba Osztrogonác 2015-09-04 03:25:55 PDT
Created attachment 260581 [details]
Patch
Comment 2 WebKit Commit Bot 2015-09-04 04:16:10 PDT
Comment on attachment 260581 [details]
Patch

Clearing flags on attachment: 260581

Committed r189342: <http://trac.webkit.org/changeset/189342>
Comment 3 WebKit Commit Bot 2015-09-04 04:16:18 PDT
All reviewed patches have been landed.  Closing bug.