[ARM] Fix the ARM Traditional build after r189288 https://bugs.webkit.org/show_bug.cgi?id=148792

Reviewed by Zoltan Herczeg.

* assembler/MacroAssemblerARM.h: Make repatchCall public similar to changes in r189288.
(JSC::MacroAssemblerARM::repatchCall):


Canonical link: https://commits.webkit.org/166896@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189342 268f45cc-cd09-0410-ab3c-d52691b4dbfc